<resources>
    <string name="app_name">ShoppingListApp</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shop_list">Shop List</string>
    <string name="new_item">New</string>
    <string name="ed_title_hint">Заголовок</string>
    <string name="description_hint">Описание</string>
    <string name="new_list">Новый список имён</string>
    <string name="new_list_hint">Введите текст</string>
    <string name="create_list">Создание списка</string>
    <string name="delete_dialog_text_title">Удаление</string>
    <string name="question_delete_dialog_text">Вы действительно хотите удалить?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="update_button_shop_list_name">Обновить</string>
    <string name="update_new_dialog_title">Редактирование названия списка</string>
    <string name="delete_list_menu">Удаление списка</string>
    <string name="clear_list_menu">Очистить список</string>
    <string name="new_item_list_menu">Новый продукт</string>
    <string name="save_item_list_menu">Сохранить</string>
    <string name="share_list_menu">Поделиться списком</string>
    <string name="empty">Пусто</string>
    <string name="update_list_item">Редактирование списка продуктов</string>
    <string name="info_edit_hint">Описание продукта</string>
    <string name="general">Основные</string>
    <string name="choose_note_style">Выбор стиля</string>
    <string name="choose_format_time">Выбор формата времени</string>
    <string name="remove_ads">Удаление рекламы</string>
    <string name="remove_ads_summary">Comming soon</string>
    <string name="theme_settings">Настройки темы</string>
    <string name="choose_theme">Выбор темы</string>
    <string name="note_text_settings">Настройки текста для блокнота</string>
    <string name="title_text_size">Выбор размера текста для заголовка</string>
    <string name="content_text_size">Размер текста</string>
</resources>