<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<PreferenceCategory android:title="@string/general">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/note_style_array"
        android:entryValues="@array/note_style_values"
        android:key="note_style_key"
        android:icon="@drawable/ic_style"
        android:title="@string/choose_note_style"
        app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/time_format_array"
        android:entryValues="@array/time_format_values"
        android:key="format_time_key"
        android:icon="@drawable/ic_time"
        android:title="@string/choose_format_time"
        app:useSimpleSummaryProvider="true"/>
    <Preference
        android:title="@string/remove_ads"
        android:summary="@string/remove_ads_summary"
        android:icon="@drawable/ic_remove_ads"/>
</PreferenceCategory>
<PreferenceCategory android:title="@string/theme_settings">
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/choose_theme_array"
        android:entryValues="@array/choose_theme_values"
        android:key="theme_key"
        android:icon="@drawable/ic_theme_style"
        app:useSimpleSummaryProvider="true"
        android:title="@string/choose_theme">
    </ListPreference>
</PreferenceCategory>
<PreferenceCategory android:title="@string/note_text_settings">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/text_size_array"
        android:entryValues="@array/text_size_values"
        android:key="title_size_key"
        android:icon="@drawable/ic_text_choose"
        app:useSimpleSummaryProvider="true"
        android:title="@string/title_text_size" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/text_size_array"
        android:entryValues="@array/text_size_values"
        android:key="content_size_key"
        android:icon="@drawable/ic_text_choose"
        app:useSimpleSummaryProvider="true"
        android:title="@string/content_text_size" />
</PreferenceCategory>
</androidx.preference.PreferenceScreen>